checkpoint: inventory api, enums, config, docker compose, celery scaffold

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 DATABASE_URL=postgresql+psycopg2://kgoro_user:ChangeMe_StrongPassword@localhost:5432/kgoro
+REDIS_URL=redis://localhost:6379/0
+JWT_SECRET=ChangeThis_ToAStrongSecret
+JWT_ALG=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
